# wordle-archive

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: build_debug.yml  build_release.yml
cicd/: version_stamp.py
contrib/: sample-config.toml  wordle-archive.service
db/: permissions.pgsql  schema.pgsql
db/migrations/: r0001_to_r0002.pgsql  r0002_to_r0003.pgsql  r0003_to_r0004.pgsql  r0004_to_r0005.pgsql  r0005_to_r0006.pgsql  r0006_to_r0007.pgsql  r0007_to_r0008.pgsql  r0008_to_r0009.pgsql  r0009_to_r0010.pgsql  r0010_to_r0011.pgsql  r0011_to_r0012.pgsql
src/: config.rs  database.rs  filters.rs  main.rs  model.rs
src/database/: migration_utils.rs  migrations_r0001.rs  migrations_r0006.rs  migrations_r0011.rs  mod.rs
static/: puzzles.js  puzzles.js.map  puzzles.ts  style.css  tsconfig.json  wordle32-spoiler.js  wordle32-spoiler.js.map  wordle32-spoiler.ts
tampermonkey/: 6mal5-copy-guesses.user.js  README.md  duotrigordle-copy-guesses.user.js  globle-copy-guesses.user.js  heardle-copy-guesses.user.js  nerdle-copy-guesses.user.js  nyt-wordle-copy-guesses.user.js  sweardle-copy-guesses.user.js  woerdl-copy-guesses.user.js  wordle-al-copy-guesses.user.js  wordle-cz-copy-guesses.user.js  wordle-es-copy-guesses.user.js  worldle-copy-guesses.user.js
templates/: 400.html  403.html  404.html  base.html  no-puzzles.html  populate-success.html  populate.html  puzzles.html  stats.html
