[package]
name = "wordle-archive"
version = "0.1.0"
edition = "2021"

[dependencies]
askama = { version = "0.11" }
chrono = { version = "0.4" }
clap = { version = "3.1", features = ["derive"] }
env_logger = { version = "0.9" }
form_urlencoded = { version = "1.0" }
hyper = { version = "0.14", features = ["full"] }
log = { version = "0.4" }
once_cell = { version = "1.10" }
percent-encoding = { version = "2.1" }
regex = { version = "1.5" }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.17", features = ["full"] }
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"] }
toml = { version = "0.5" }
url = { version = "2.2" }
