[package]
name = "wordle-archive"
version = "0.1.0"
edition = "2021"

[dependencies]
askama = { version = "0.12" }
async-trait = { version = "0.1" }
chrono = { version = "0.4" }
clap = { version = "4.5", features = ["derive"] }
env_logger = { version = "0.11" }
form_urlencoded = { version = "1.2" }
http-body-util = { version = "0.1" }
hyper = { version = "1.4" }
hyper-util = { version = "0.1", features = ["http1", "http2", "server", "tokio"] }
log = { version = "0.4" }
once_cell = { version = "1.19" }
percent-encoding = { version = "2.3" }
rand = { version = "0.8" }
regex = { version = "1.10" }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.40", features = ["full"] }
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"] }
toml = { version = "0.8" }
url = { version = "2.5" }
